comment distrib management wiating for gitlab

--- a/pom.xml
+++ b/pom.xml
@@ -109,12 +109,12 @@
         <tag>25.3.0.36</tag>
     </scm>
 
-    <distributionManagement>
+    <!-- <distributionManagement>
         <repository>
             <id>alfresco-internal</id>
             <url>https://artifacts.alfresco.com/nexus/content/repositories/releases</url>
         </repository>
-    </distributionManagement>
+    </distributionManagement> -->
 
     <dependencyManagement>
         <dependencies>
