--- a/alfresco-tas-share-test/pom.xml
+++ b/alfresco-tas-share-test/pom.xml
@@ -12,7 +12,7 @@
    <artifactId>share-test</artifactId>
    <packaging>jar</packaging>
 
-   <distributionManagement>
+   <!-- <distributionManagement>
       <snapshotRepository>
          <id>alfresco-internal-snapshots</id>
          <url>
@@ -23,7 +23,7 @@
          <id>alfresco-internal</id>
          <url>https://nexus.alfresco.com/nexus/content/repositories/internal-releases/</url>
       </repository>
-   </distributionManagement>
+   </distributionManagement> -->
 
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
